# assignment

./: .gitignore  README.md  pyproject.toml
assignment/resources/: releases.txt
assignment/task_1/: ReleasePlanner.py
assignment/task_2/: Strategic thinking assignment.md
test/: test_ReleasePlanner.py
